--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "clublamarque",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "homepage": "https://sebastian-perouene-muanna.github.io/club-app",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint ."
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "firebase": "^11.6.0",
@@ -30,6 +30,7 @@
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.1",
